@@ -49,6 +49,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   incorrectly
 * (bug 16858) Revamped list=deletedrevs to make listing deleted contributions
   and listing all deleted pages possible
+* (bug 16844) Added clcategories parameter to prop=categories
 
 === Languages updated in 1.15 ===
 
